--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -6,7 +6,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, strong, sub, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -326,6 +326,10 @@ footer a {
 }
 footer a:hover {
   color: #444;
+}
+
+.definitions {
+    margin-left: 20px;
 }
 
 /* MISC */
